# zkph

./: .dockerignore  Dockerfile  Readme.md
HDProof/: Cargo.toml
HDProof/3rd/ml_sumcheck/: Cargo.toml  data_structures.rs  mod.rs
HDProof/3rd/ml_sumcheck/protocol/: mod.rs  prover.rs  verifier.rs
HDProof/3rd/poly-commit/poly-commit/: Cargo.toml
HDProof/3rd/poly-commit/poly-commit/src/: lib.rs
HDProof/src/: error.rs  lib.rs  rng.rs
HDProof/src/ham_proof/: mod.rs  test.rs  tools.rs  two_step_proof.rs
PerceptHash/: requirements.txt
PerceptHash/eval/: Common.py  EvalAblations.py  EvalAuc.py  EvalCoco.py  EvalParamLatency.py  __init__.py
PerceptHash/model/: ConvNeXtV2.py  MambaHash.py  MambaOut.py  ModelFactory.py  SwinTransformer.py
PerceptHash/model/kernels/selective_scan/: setup.py
PerceptHash/model/prior/: dinohash.py  neuralhash.py
PerceptHash/script/: AblationTrainViT.py  TrainAll.py  TuneAll.py
PerceptHash/utils/: GenCocoData.py  HashLoss.py  LossFactory.py  tools.py
