[package]
name = "hamproof"
version = "0.4.0"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"
resolver = "2"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
ark-std = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = ["sponge"] }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = ["curve"] }
hashbrown = { version = "0.15.3" }
blake2 = { version = "0.10", default-features = false }
rayon = { version = "1.10", optional = true }
rand = "0.8"
clap = { version = "4", features = ["std"] }

# Local poly-commit (arkworks) with Hyrax PCS; expose as `poly_commit` in code
poly_commit = { package = "ark-poly-commit", path = "3rd/poly-commit/poly-commit", default-features = false, features = ["std", "parallel"] }
ml_sumcheck = { path = "3rd/ml_sumcheck" }

[dev-dependencies]
ark-test-curves = { version = "0.5.0", default-features = false, features = ["bls12_381_scalar_field", "bls12_381_curve"] }
criterion = { version = "0.5", default-features = true }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
codegen-units = 1
debug = false
rpath = false
lto = "fat"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
codegen-units = 1
lto = "fat"
incremental = true
debug-assertions = true
debug = true

[features]
default = ["std", "parallel"]
std = [
	"ark-ff/std",
	"ark-serialize/std",
	"blake2/std",
	"ark-std/std",
	"ark-poly/std",
	"ark-ec/std",
	"ark-crypto-primitives/std",
]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon"]

