[package]
name = "ml_sumcheck"
version = "0.1.0"
edition = "2021"

[lib]
name = "ml_sumcheck"
path = "mod.rs"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
ark-std = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = ["sponge"] }
ark-ec = { version = "0.5.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = ["curve"] }
hashbrown = { version = "0.15.3" }
blake2 = { version = "0.10", default-features = false }
rayon = { version = "1.10", optional = true }
rand = "0.8"

[features]
default = ["std", "parallel"]
std = [
	"ark-ff/std",
	"ark-serialize/std",
	"blake2/std",
	"ark-std/std",
	"ark-poly/std",
	"ark-ec/std",
	"ark-crypto-primitives/std",
]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon"]